docs/pago-pa/saci/3.1.0/specifiche-attuative-dei-codici-identificativi-di-versamento-riversamento-e-rendicontazione/changelog.md
# Changelog

### 3.1.0 (marzo 2023)

* Aggiornati i codici di segregazione a disposizione degli EC in [#punti-di-generazione-del-codice-iuv](generazione-dellidentificativo-univoco-di-versamento.md#punti-di-generazione-del-codice-iuv "mention")
* Rimossi riferimenti agli aux digit 0-1-2 in [generazione-dellidentificativo-univoco-di-versamento.md](generazione-dellidentificativo-univoco-di-versamento.md "mention")

### 3.0.1 (ottobre 2022)

* Chiarimenti in merito all'orario della [#giornata-operativa-ed-invio-del-sepa-credit-transfer](operazione-di-trasferimento-fondi.md#giornata-operativa-ed-invio-del-sepa-credit-transfer "mention")

### 3.0.0 (luglio 2022)

* Major Release
* Adeguamento al nuovo modello unico di pagamento in [generazione-dellidentificativo-univoco-di-versamento.md](generazione-dellidentificativo-univoco-di-versamento.md "mention")
* Chiarimenti in merito ai riversamenti cumulativi in [operazione-di-trasferimento-fondi.md](operazione-di-trasferimento-fondi.md "mention")
* Adeguamento al nuovo modello unico di pagamento in [flusso-di-rendicontazione.md](flusso-di-rendicontazione.md "mention")

### 2.0.0 (febbraio 2022)

* Migrazione su piattaforma GitBook
* Revisione completa della struttura
* Rimossi alcuni contenuti già presenti nelle SANP
* Introduzione del changelog
* Rimosso capitolo "Ciclo di vita del pagamento"
* Rimosso capitolo "Siti web degli Enti Creditori"
* Rimosso capitolo "Formato della causale di versamento": fare riferimento direttamente al paragrafo 7.1 delle Linee Guida per la creazione della causale di versamento.
* Chiarimenti in merito all'[operazione-di-trasferimento-fondi.md](operazione-di-trasferimento-fondi.md "mention")
* Rimosso capitolo "Specificità per il pagamento della marca da bollo digitale"
* Modifiche a  [#precisazioni-sulla-colonna-contenuto-della-tabella-6-flusso-per-la-rendicontazione-schema-dati](flusso-di-rendicontazione.md#precisazioni-sulla-colonna-contenuto-della-tabella-6-flusso-per-la-rendicontazione-schema-dati "mention")
* Correzione di alcuni errori di impaginazione

### 1.4.0 (ottobre 2021)

* Riversamenti cumulativi: obbligatorietà e precisazioni

### 1.3.1 (30 gennaio 2018)

* Gestione del rifiuto del SEPA Credit Transfer (REJECT)
* Precisazioni sulla riconciliazione

### 1.3.0 (7 dicembre 2017)

* Modifica di Tabella 1 - Codici di segregazione dei servizi centralizzati

### 1.3 (4 ottobre 2016)

* Gestione del codice IUV per enti con più intermediari

### 1.2.1 (13 giugno 2016)

* Caratteri ammessi per il dato idFlusso

### 1.2.0 (15 marzo 2016)

* Precisazioni varie

### 1.2 (15 luglio 2015)

* Recepimento di suggerimenti proposti dagli stakeholders

### 1.1 (31 ottobre 2013)

* Recepimento delle osservazioni proposte dagli stakeholders

### 1.0.1 (22 luglio 2013)

* Rilascio Linee guida

### 1.0 (12 aprile 2013)

* Versione base
